syntax = "proto3";
package user.v1;
option go_package = "shop/user/api-gen/v1;userpb";
import "google/protobuf/empty.proto";

service UserService{
  rpc GetUserList(PageInfo)returns (UserListResponse);
  rpc GetUserByMobile(GetUserMobileRequest)returns (UserInfo);
  rpc GetUserById(GetUserByIdRequest)returns (UserInfo);
  rpc CreateUser(CreateUserRequest) returns (UserInfo);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc CheckPassWord(CheckPassWordRequest)returns(CheckPassWordResponse);
}
message CheckPassWordRequest {
  string password = 1;
  string encrypted_password = 2;
}
message CheckPassWordResponse {
  bool success = 1;
}
message PageInfo {
  uint32 pn = 1; // 页码
  uint32 p_size = 2; // 每页大小
}
message UserListResponse {
  int32 total = 1;
  repeated UserInfo user_info= 2;
}
message UserInfo {
  string user_id = 1;
  string password = 2;
  string mobile = 3;
  string nike_name = 4;
  int64 birthday = 5;
  string gender = 6;
  int32 role = 7;
}
message GetUserMobileRequest{
  string mobile = 1;
}
//message GetUserMobileResponse{
//  UserInfo user_info = 1;
//}
message GetUserByIdRequest {
  string user_id = 1;
}
message CreateUserRequest {
  string nike_name = 1;
  string password = 2;
  string mobile = 3;
}
message UpdateUserRequest {
  int32 id = 1;
  string nick_name = 2;
  string gender = 3;
  uint64 birthday = 4;
}